--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,6 @@ uvicorn==0.32.0
 pydantic==2.9.2
 coverage==7.6.4
 pytest-asyncio==0.24.0
+google-generativeai==0.8.3
+Pillow==11.0.0
+python-multipart==0.0.19
